# zavladi

./: .gitignore  CMakeLists.txt  Makefile
include/: Bitmap.hpp  Config.hpp  Drawable.hpp  Framebuffer.hpp  GameField.hpp  Window.hpp
include/glad/: glad.h
res/: ghost.rgb
src/: Bitmap.cpp  Framebuffer.cpp  Main.cpp  Window.cpp  glad.c
